Update SENTIMENT CLASSIFIER   projectpart1.ipynb

--- a/SENTIMENT CLASSIFIER   projectpart1.ipynb
+++ b/SENTIMENT CLASSIFIER   projectpart1.ipynb
@@ -32,8 +32,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bho's'd'k\n",
-      "Bhosdk\n"
+      "nas'd'k\n",
+      "nasir\n"
      ]
     }
    ],
