Update SENTIMENT CLASSIFIER   projectpart1.ipynb

--- a/SENTIMENT CLASSIFIER   projectpart1.ipynb
+++ b/SENTIMENT CLASSIFIER   projectpart1.ipynb
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nas'd'k\n",
+      "nas'i'r\n",
       "nasir\n"
      ]
     }
